make first slide

--- a/index.html
+++ b/index.html
@@ -13,7 +13,29 @@
 <!------------------------ FAQ SECTION ------------------->
 <section>
     <div class="container">
-        <h1 class="text-center font-sora text-xxl text-faqBlack font-semibold">Frequently asked questions</h1>
+        <h1 class="text-center font-sora text-xxl text-faqBlack fw-semibold mb-0">Frequently asked questions</h1>
+        <p class="mb-0 pt-4 font-sora fw-normal text-center text-md text-faqSub">Everything you need to know about the
+            product and billing.
+        </p>
+
+        <div class="accordian pt_lg_40 px-4">
+            <div class="accordion-click-part d-flex justify-content-between pt-3">
+                <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">Steps required for broker order
+                    integration in
+                    live deployment?
+                </h3>
+                <span>
+                    <img src="" alt="">
+                </span>
+            </div>
+            <div class="accordian_hidden_text">
+                <div class="d-flex align-items-center gap-2">
+                    <div class="dots"></div>
+                    <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via your
+                        broker.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
