--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 </head>
 
 <body>
-    <!---------------------------- slider Section ------------------------>
-    <section class="py-Broker"></section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
