added the slider section in the page

--- a/somesections.html
+++ b/somesections.html
@@ -20,8 +20,8 @@
     <!---------------------------- slider Section ------------------------>
     <section class="py-Broker">
         <div class="container-keepSL">
-            <div class="row">
-                <div class="col-lg-6">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-lg-6 col-sm-8">
                     <div class="slick-slider">
                         <div class="slider-items">
                             <img src="./assets/images/png/SliderImg.png" alt="brokers images" class="w-100 h-100">
@@ -37,17 +37,31 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column">
+                <div class="col-lg-6 col-sm-8 d-flex align-items-start justify-content-center flex-column">
                     <div class="d-flex align-items-start justify-content-start">
-                        <p class="ls-1 font-sora fw-semibold text-xxl max-w-sliderText text-sliderBlack">50+ Trusted
+                        <p
+                            class="ls-1 font-sora fw-semibold text-xxl max-w-sliderText text-sliderBlack mb-0 mediaSliderMainTxt">
+                            50+
+                            Trusted
                             Brokers We Partner
                             With</p>
                     </div>
-                    <div>
-                        <p>We collaborate with industry-leading brokers to provide you with seamless and secure
+                    <div class="d-flex align-items-start justify-content-start my-media-sliderContent">
+                        <p
+                            class="font-sora fw-normal text-md mediaSubTxt text-sliderBlack opacity-75 max-w-sliderSubTxt mb-0">
+                            We
+                            collaborate with
+                            industry-leading brokers to provide
+                            you with seamless and secure
                             integration. Explore our network of
                             reputable brokers that ensure reliability.</p>
                     </div>
+                    <button
+                        class="btnGetStart d-flex align-items-center justify-content-center font-sora fw-semibold text-base text-white text-nowrap">Get
+                        Started
+                        <div class="wh-btnArrow"><img src="./assets/images/png/send.png" class=" w-100 h-100"
+                                alt="arrow png"></div>
+                    </button>
                 </div>
             </div>
         </div>
