make the accordina

--- a/faq.html
+++ b/faq.html
@@ -18,18 +18,21 @@
             product and billing.
         </p>
 
-        <div class="accordian pt_lg_40 px-4">
-            <div class="accordion-click-part d-flex justify-content-between pt-3">
+        <div class="accordian px-4 mt_lg_40 p-4">
+            <div class="accordion-click-part d-flex justify-content-between cursor-poniter">
                 <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">Steps required for broker order
                     integration in
                     live deployment?
                 </h3>
-                <span>
-                    <img src="" alt="">
-                </span>
+                <div class="acc_sub_img">
+                    <img src="./assets/images/png/accodeina-sub-img.png" alt="accorian sub img" class=" w-100 h-100">
+                </div>
+                <div class=" acc_add_img">
+                    <img src="./assets/images/png/accodeina-add-img.png" alt="add img" class="w-100 h-100">
+                </div>
             </div>
             <div class="accordian_hidden_text max-w-850">
-                <div class="d-flex align-items-baseline gap-2">
+                <div class="d-flex align-items-baseline gap-2 pt-2">
                     <div class="dots"></div>
                     <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via your
                         broker.</p>
@@ -47,6 +50,69 @@
                 </div>
             </div>
         </div>
+        <div class="accordian px-4 mt-3 p-4">
+            <div class="accordion-click-part d-flex justify-content-between cursor-poniter">
+                <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">
+                    How does live deployment work?
+                </h3>
+                <div class="acc_sub_img">
+                    <img src="./assets/images/png/accodeina-sub-img.png" alt="accorian sub img" class=" w-100 h-100">
+                </div>
+                <div class=" acc_add_img">
+                    <img src="./assets/images/png/accodeina-add-img.png" alt="add img" class="w-100 h-100">
+                </div>
+            </div>
+            <div class="accordian_hidden_text max-w-850">
+                <div class="d-flex align-items-baseline gap-2 pt-2">
+                    <div class="dots"></div>
+                    <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via your
+                        broker.</p>
+                </div>
+                <div class="d-flex align-items-baseline gap-2">
+                    <div class="dots"></div>
+                    <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Create a live deployment
+                        to place an order and verify it in your broker terminal.</p>
+                </div>
+                <div class="d-flex align-items-baseline gap-2">
+                    <div class="dots"></div>
+                    <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">NOTE :You must log in
+                        daily to KeepSL via the same broker account for orders that need to be executed from KeepSL on
+                        that day.</p>
+                </div>
+            </div>
+        </div>
+        <div class="accordian px-4 mt-3 p-4">
+            <div class="accordion-click-part d-flex justify-content-between cursor-poniter">
+                <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">Can I manually close the positions taken
+                    by live deployment?
+                </h3>
+                <div class="acc_sub_img">
+                    <img src="./assets/images/png/accodeina-sub-img.png" alt="accorian sub img" class=" w-100 h-100">
+                </div>
+                <div class=" acc_add_img">
+                    <img src="./assets/images/png/accodeina-add-img.png" alt="add img" class="w-100 h-100">
+                </div>
+            </div>
+            <div class="accordian_hidden_text max-w-850">
+                <div class="d-flex align-items-baseline gap-2 pt-2">
+                    <div class="dots"></div>
+                    <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via your
+                        broker.</p>
+                </div>
+                <div class="d-flex align-items-baseline gap-2">
+                    <div class="dots"></div>
+                    <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Create a live deployment
+                        to place an order and verify it in your broker terminal.</p>
+                </div>
+                <div class="d-flex align-items-baseline gap-2">
+                    <div class="dots"></div>
+                    <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">NOTE :You must log in
+                        daily to KeepSL via the same broker account for orders that need to be executed from KeepSL on
+                        that day.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
 
