pulled and merged code from branches

--- a/index.html
+++ b/index.html
@@ -9,9 +9,189 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"
+        integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"
+        integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <!---------------------------- slider Section ------------------------>
+    <section class="py-Broker">
+        <div class="container-keepSL">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-lg-6 col-sm-8">
+                    <div class="slick-slider">
+                        <div class="slider-items">
+                            <img src="./assets/images/png/SliderImg.png" alt="brokers images" class="w-100 h-100">
+                        </div>
+                        <div class="slider-items">
+                            <img src="./assets/images/png/SliderImg.png" alt="brokers images" class="w-100 h-100">
+                        </div>
+                        <div class="slider-items">
+                            <img src="./assets/images/png/SliderImg.png" alt="brokers images" class="w-100 h-100">
+                        </div>
+                        <div class="slider-items">
+                            <img src="./assets/images/png/SliderImg.png" alt="brokers images" class="w-100 h-100">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-8 d-flex align-items-start justify-content-center flex-column">
+                    <div class="d-flex align-items-start justify-content-start">
+                        <p
+                            class="ls-1 font-sora fw-semibold text-xxl max-w-sliderText text-sliderBlack mb-0 mediaSliderMainTxt">
+                            50+
+                            Trusted
+                            Brokers We Partner
+                            With</p>
+                    </div>
+                    <div class="d-flex align-items-start justify-content-start my-media-sliderContent">
+                        <p
+                            class="font-sora fw-normal text-md mediaSubTxt text-sliderBlack opacity-75 max-w-sliderSubTxt mb-0">
+                            We
+                            collaborate with
+                            industry-leading brokers to provide
+                            you with seamless and secure
+                            integration. Explore our network of
+                            reputable brokers that ensure reliability.</p>
+                    </div>
+                    <button
+                        class="btnGetStart d-flex align-items-center justify-content-center font-sora fw-semibold text-base text-white text-nowrap">Get
+                        Started
+                        <div class="wh-btnArrow"><img src="./assets/images/png/send.png" class=" w-100 h-100"
+                                alt="arrow png"></div>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!------------------------ FAQ SECTION ------------------->
+    <section>
+        <div class="container">
+            <h1 class="text-center font-sora text-xxl text-faqBlack fw-semibold mb-0">Frequently asked questions</h1>
+            <p class="mb-0 pt-4 font-sora fw-normal text-center text-md text-faqSub">Everything you need to know about
+                the
+                product and billing.
+            </p>
+
+            <div class="accordian px-4 mt_lg_40 p-4">
+                <div class="accordion-click-part d-flex justify-content-between cursor-poniter">
+                    <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">Steps required for broker order
+                        integration in
+                        live deployment?
+                    </h3>
+                    <div class="acc_sub_img">
+                        <img src="./assets/images/png/accodeina-sub-img.png" alt="accorian sub img"
+                            class=" w-100 h-100">
+                    </div>
+                    <div class=" acc_add_img">
+                        <img src="./assets/images/png/accodeina-add-img.png" alt="add img" class="w-100 h-100">
+                    </div>
+                </div>
+                <div class="accordian_hidden_text max-w-850">
+                    <div class="d-flex align-items-baseline gap-2 pt-2">
+                        <div class="dots"></div>
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via
+                            your
+                            broker.</p>
+                    </div>
+                    <div class="d-flex align-items-baseline gap-2">
+                        <div class="dots"></div>
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Create a live
+                            deployment
+                            to place an order and verify it in your broker terminal.</p>
+                    </div>
+                    <div class="d-flex align-items-baseline gap-2">
+                        <div class="dots"></div>
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">NOTE :You must log in
+                            daily to KeepSL via the same broker account for orders that need to be executed from KeepSL
+                            on
+                            that day.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="accordian px-4 mt-3 p-4">
+                <div class="accordion-click-part d-flex justify-content-between cursor-poniter">
+                    <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">
+                        How does live deployment work?
+                    </h3>
+                    <div class="acc_sub_img">
+                        <img src="./assets/images/png/accodeina-sub-img.png" alt="accorian sub img"
+                            class=" w-100 h-100">
+                    </div>
+                    <div class=" acc_add_img">
+                        <img src="./assets/images/png/accodeina-add-img.png" alt="add img" class="w-100 h-100">
+                    </div>
+                </div>
+                <div class="accordian_hidden_text max-w-850">
+                    <div class="d-flex align-items-baseline gap-2 pt-2">
+                        <div class="dots"></div>
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via
+                            your
+                            broker.</p>
+                    </div>
+                    <div class="d-flex align-items-baseline gap-2">
+                        <div class="dots"></div>
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Create a live
+                            deployment
+                            to place an order and verify it in your broker terminal.</p>
+                    </div>
+                    <div class="d-flex align-items-baseline gap-2">
+                        <div class="dots"></div>
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">NOTE :You must log in
+                            daily to KeepSL via the same broker account for orders that need to be executed from KeepSL
+                            on
+                            that day.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="accordian px-4 mt-3 p-4">
+                <div class="accordion-click-part d-flex justify-content-between cursor-poniter">
+                    <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">Can I manually close the positions
+                        taken
+                        by live deployment?
+                    </h3>
+                    <div class="acc_sub_img">
+                        <img src="./assets/images/png/accodeina-sub-img.png" alt="accorian sub img"
+                            class=" w-100 h-100">
+                    </div>
+                    <div class=" acc_add_img">
+                        <img src="./assets/images/png/accodeina-add-img.png" alt="add img" class="w-100 h-100">
+                    </div>
+                </div>
+                <div class="accordian_hidden_text max-w-850">
+                    <div class="d-flex align-items-baseline gap-2 pt-2">
+                        <div class="dots"></div>
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Login into KeepSL via
+                            your
+                            broker.</p>
+                    </div>
+                    <div class="d-flex align-items-baseline gap-2">
+                        <div class="dots"></div>
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">Create a live
+                            deployment
+                            to place an order and verify it in your broker terminal.</p>
+                    </div>
+                    <div class="d-flex align-items-baseline gap-2">
+                        <div class="dots"></div>
+                        <p class=" font-sora fw-normal  text-md opacity-75 text-sliderBlack mb-0">NOTE :You must log in
+                            daily to KeepSL via the same broker account for orders that need to be executed from KeepSL
+                            on
+                            that day.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+        integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!------------------ bootstrip js link ------------------------>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
