complete the faq section

--- a/faq.html
+++ b/faq.html
@@ -15,15 +15,18 @@
     <!------------------------ FAQ SECTION ------------------->
     <section>
         <div class="container">
-            <h1 class="text-center font-sora text-xxl text-faqBlack fw-semibold mb-0">Frequently asked questions</h1>
-            <p class="mb-0 pt-4 font-sora fw-normal text-center text-md text-faqSub">Everything you need to know about
+            <h1 class="text-center font-sora text-xxl text-faqBlack fw-semibold mb-0 mediaSliderMainTxt">Frequently
+                asked questions</h1>
+            <p class="mb-0 lg-pt-4 pt-3 font-sora fw-normal text-center text-md text-faqSub">Everything you need to know
+                about
                 the
                 product and billing.
             </p>
 
-            <div class="accordian px-4 mt_lg_40 p-4">
-                <div class="accordion-click-part d-flex justify-content-between cursor-poniter">
-                    <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">Steps required for broker order
+            <div class="accordian px-4 mt_lg_40 p-4 mt-4 ">
+                <div class="accordion-click-part d-flex justify-content-between cursor-poniter gap-">
+                    <h3 class="font-sora fw-semibold text-faqBlack text-xmd md-text-lg mb-0">Steps required for broker
+                        order
                         integration in
                         live deployment?
                     </h3>
@@ -58,8 +61,8 @@
                 </div>
             </div>
             <div class="accordian px-4 mt-3 p-4">
-                <div class="accordion-click-part d-flex justify-content-between cursor-poniter">
-                    <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">
+                <div class="accordion-click-part d-flex justify-content-between cursor-poniter gap-3">
+                    <h3 class="font-sora fw-semibold text-faqBlack text-xmd md-text-lg mb-0">
                         How does live deployment work?
                     </h3>
                     <div class="acc_sub_img">
@@ -93,8 +96,9 @@
                 </div>
             </div>
             <div class="accordian px-4 mt-3 p-4">
-                <div class="accordion-click-part d-flex justify-content-between cursor-poniter">
-                    <h3 class="font-sora fw-semibold text-faqBlack  text-lg mb-0">Can I manually close the positions
+                <div class="accordion-click-part d-flex justify-content-between cursor-poniter gap-2">
+                    <h3 class="font-sora fw-semibold text-faqBlack  md-text-lg mb-0 text-xmd">Can I manually close the
+                        positions
                         taken
                         by live deployment?
                     </h3>
@@ -126,6 +130,13 @@
                             on
                             that day.</p>
                     </div>
+                </div>
+            </div>
+
+            <div class="p-4 moreQuestion mt-3 d-flex justify-content-between cursor-poniter">
+                <h1 class="font-sora fw-semibold opacity-75 primary-color text-lg mb-0">More questions</h1>
+                <div class="right-side-arrow">
+                    <img src="./assets/images/png/right-side-arrow.png" alt="right arrow" class=" w-100 h-100 ">
                 </div>
             </div>
 
