added free trial section in the page

--- a/somesections.html
+++ b/somesections.html
@@ -66,6 +66,23 @@
             </div>
         </div>
     </section>
+
+    <!-- Free Trial -->
+
+    <section class="px-3">
+        <div
+            class="container-keepSL freeTrialSec d-flex align-items-center justify-content-center flex-column py-media-freeTrial">
+            <p class="font-sora fw-semibold text-xxl text-white mb-mediaTrialTxt mediaSliderMainTxt">30-Days Free Trial!
+            </p>
+            <button
+                class="btnGetStart btnGetStartTrial d-flex align-items-center justify-content-center font-sora fw-semibold text-base text-nowrap">Get
+                Started
+                <div class="wh-btnTrial d-flex align-items-center justify-content-center"><img
+                        src="./assets/images/png/Group.png" class=" w-100 h-100" alt="arrow png">
+                </div>
+            </button>
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
