complete the stay update with keepsl section

--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
     <!------------------------ FAQ SECTION ------------------->
     <section>
         <div class="container">
@@ -140,6 +141,42 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <!-------------------- stay updated with keepSL ------------------------>
+    <section>
+        <div class="container max-w-920 mx-auto">
+            <h1
+                class="text-center font-sora text-xxl text-faqBlack fw-semibold mb-0 mediaSliderMainTxt max-lg-max-w-600 mx-auto">
+                Stay updated
+                with KeepSL</h1>
+            <div class="row justify-content-center max-lg-max-w-600 mx-auto">
+                <div class="col-lg-4 col-md-6 mt_40 justify-content-center d-flex">
+                    <a href="#" class="updatedCard d-flex align-items-center justify-content-center flex-column">
+                        <div class="social-media-icon"><img src="./assets/images/png/telegram-logo.png"
+                                alt="telegram logo" class="w-100 h-100"></div>
+                        <p class="max-w-224 font-sora text-lg  pt-3 text-center fw-semibold text-black">Community
+                            discussions</p>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 mt_40 justify-content-center d-flex">
+                    <a href="#" class="updatedCard d-flex align-items-center justify-content-center flex-column">
+                        <div class="social-media-icon"><img src="./assets/images/png/youtube-logo.png"
+                                alt="telegram logo" class="w-100 h-100"></div>
+                        <p class="max-w-224 font-sora text-lg  pt-3 text-center fw-semibold text-black">Webinar
+                            recordings tutorials</p>
+                    </a>
+                </div>
+                <div class="col-lg-4 mt_40 col-md-6 justify-content-center d-flex">
+                    <a href="#" class="updatedCard d-flex align-items-center justify-content-center flex-column">
+                        <div class="social-media-icon"><img src="./assets/images/png/twitter-logo.png"
+                                alt="telegram logo" class="w-100 h-100"></div>
+                        <p class="max-w-224 font-sora text-lg  pt-3 text-center fw-semibold text-black">Feature updates,
+                            announcements</p>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
     <!------------------s bootstrip js link ------------------------>
