change some in accordian

--- a/faq.html
+++ b/faq.html
@@ -153,7 +153,8 @@
                 with KeepSL</h1>
             <div class="row justify-content-center max-lg-max-w-600 mx-auto">
                 <div class="col-lg-4 col-md-6 mt_40 justify-content-center d-flex">
-                    <a href="#" class="updatedCard d-flex align-items-center justify-content-center flex-column">
+                    <a href="https://web.telegram.org/"
+                        class="updatedCard d-flex align-items-center justify-content-center flex-column">
                         <div class="social-media-icon"><img src="./assets/images/png/telegram-logo.png"
                                 alt="telegram logo" class="w-100 h-100"></div>
                         <p class="max-w-224 font-sora text-lg  pt-3 text-center fw-semibold text-black">Community
@@ -161,7 +162,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 mt_40 justify-content-center d-flex">
-                    <a href="#" class="updatedCard d-flex align-items-center justify-content-center flex-column">
+                    <a href="https://www.youtube.com/"
+                        class="updatedCard d-flex align-items-center justify-content-center flex-column">
                         <div class="social-media-icon"><img src="./assets/images/png/youtube-logo.png"
                                 alt="telegram logo" class="w-100 h-100"></div>
                         <p class="max-w-224 font-sora text-lg  pt-3 text-center fw-semibold text-black">Webinar
@@ -169,7 +171,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 mt_40 col-md-6 justify-content-center d-flex">
-                    <a href="#" class="updatedCard d-flex align-items-center justify-content-center flex-column">
+                    <a href="https://twitter.com/i/flow/login?lang=en"
+                        class="updatedCard d-flex align-items-center justify-content-center flex-column">
                         <div class="social-media-icon"><img src="./assets/images/png/twitter-logo.png"
                                 alt="telegram logo" class="w-100 h-100"></div>
                         <p class="max-w-224 font-sora text-lg  pt-3 text-center fw-semibold text-black">Feature updates,
