added footer section

--- a/somesections.html
+++ b/somesections.html
@@ -83,6 +83,58 @@
             </button>
         </div>
     </section>
+
+    <!-- Footer Section -->
+
+    <footer class="footerProp">
+        <div class="container-keepSL">
+            <div class="row justify-content-between">
+                <div class="col-lg-4">
+                    <div class="footerLogo">
+                        <img src="./assets/images/png/Keepsl_logo.png" class="w-100 h-100" alt="">
+                    </div>
+                    <p class="max-w-footerTxt font-sora fw-normal text-base text-white pyFooterColTxt mb-0">KEEPSl
+                        TECHNOLOGIES LLP
+                        PUTTENAHALLI(V) JP
+                        NAGAR, 7TH PHASE BENGALURU, KARNATAKA,INDIA 560078</p>
+                    <div class="d-flex align-items-start justify-content-start flex-column">
+                        <a href="mailto:whatisthis@gmail.com"
+                            class="font-sora fw-normal text-sm text-white">Email: support@keepsl.com</a>
+                        <a href="tel:123456789" class="font-sora fw-normal text-sm text-white">Tel. 9844858629</a>
+                    </div>
+                </div>
+                <div class="col-lg-2 d-flex flex-column align-items-start justify-content-start">
+                    <p class="font-sora text-base text-white">Navigation</p>
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">About Us
+                    </a>
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                        Features
+                    </a>
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                        Pricing
+                    </a>
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                        Documentation
+                    </a>
+                </div>
+                <div class="col-lg-3 d-flex flex-column align-items-start justify-content-start">
+                    <p class="font-sora text-base text-white">Terms</p>
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">Refund Policy
+                    </a>
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                        Terms and Conditions
+                    </a>
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                        Privacy Policy
+                    </a>
+                </div>
+            </div>
+            <div class="d-flex align-items-center justify-content-between pt-copyright">
+                <p class="font-sora fw-normal text-footer text-white opacity-65">© 2024 KeepSL. All rights reserved.</p>
+                <p class="font-sora fw-normal text-footer text-white opacity-65">Privecy Policy. Terms & Condition</p>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
