add hover effect in accordian

--- a/faq.html
+++ b/faq.html
@@ -135,9 +135,18 @@
             </div>
 
             <div class="p-4 moreQuestion mt-3 d-flex justify-content-between cursor-poniter">
-                <h1 class="font-sora fw-semibold opacity-75 primary-color text-lg mb-0">More questions</h1>
+                <h1 class="font-sora fw-semibold opacity-75 text-faqBlack text-lg mb-0 ">More questions</h1>
                 <div class="right-side-arrow">
-                    <img src="./assets/images/png/right-side-arrow.png" alt="right arrow" class=" w-100 h-100 ">
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M12 22.5342C17.5228 22.5342 22 18.057 22 12.5342C22 7.01133 17.5228 2.53418 12 2.53418C6.47715 2.53418 2 7.01133 2 12.5342C2 18.057 6.47715 22.5342 12 22.5342Z"
+                            stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M12 16.5342L16 12.5342L12 8.53418" stroke="black" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M8 12.5342H16" stroke="black" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
+
                 </div>
             </div>
 
@@ -182,6 +191,7 @@
             </div>
         </div>
     </section>
+
     <!------------------s bootstrip js link ------------------------>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
