completed the footer

--- a/somesections.html
+++ b/somesections.html
@@ -89,7 +89,7 @@
     <footer class="footerProp">
         <div class="container-keepSL">
             <div class="row justify-content-between">
-                <div class="col-lg-4">
+                <div class="col-md-4 mb-sm-0 mbMediaSm">
                     <div class="footerLogo">
                         <img src="./assets/images/png/Keepsl_logo.png" class="w-100 h-100" alt="">
                     </div>
@@ -103,34 +103,37 @@
                         <a href="tel:123456789" class="font-sora fw-normal text-sm text-white">Tel. 9844858629</a>
                     </div>
                 </div>
-                <div class="col-lg-2 d-flex flex-column align-items-start justify-content-start">
-                    <p class="font-sora text-base text-white">Navigation</p>
-                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">About Us
+                <div class="col-md-2 col-6 d-flex flex-column align-items-start justify-content-start">
+                    <p class="font-sora text-base text-white mbFooterLink">Navigation</p>
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal mbFooterSubLink">About Us
                     </a>
-                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal mbFooterSubLink">
                         Features
                     </a>
-                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal mbFooterSubLink">
                         Pricing
                     </a>
-                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal mbFooterSubLink">
                         Documentation
                     </a>
                 </div>
-                <div class="col-lg-3 d-flex flex-column align-items-start justify-content-start">
-                    <p class="font-sora text-base text-white">Terms</p>
-                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">Refund Policy
+                <div class="col-md-3 col-6 d-flex flex-column align-items-start justify-content-start">
+                    <p class="font-sora text-base text-white mbFooterLink">Terms</p>
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal mbFooterSubLink">Refund Policy
                     </a>
-                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal mbFooterSubLink">
                         Terms and Conditions
                     </a>
-                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal">
+                    <a href="#" class="font-sora text-sm text-white opacity-75 fw-normal mbFooterSubLink">
                         Privacy Policy
                     </a>
                 </div>
             </div>
-            <div class="d-flex align-items-center justify-content-between pt-copyright">
-                <p class="font-sora fw-normal text-footer text-white opacity-65">© 2024 KeepSL. All rights reserved.</p>
+            <div class="line"></div>
+            <div
+                class="d-flex align-items-center justify-content-sm-between justify-content-center pt-copyright flex-sm-nowrap flex-wrap">
+                <p class="font-sora fw-normal text-footer text-white opacity-65 mb-sm-0 mb-1">© 2024 KeepSL. All rights
+                    reserved.</p>
                 <p class="font-sora fw-normal text-footer text-white opacity-65">Privecy Policy. Terms & Condition</p>
             </div>
         </div>
